--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "framer-motion": "^11.3.30",
+    "gsap": "^3.12.5",
     "next": "14.2.6",
+    "npm": "^10.8.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
