--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "npm": "^10.8.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
